@@ -111,15 +111,15 @@ public class ExerciseApi extends RestBehavior {
   @Transactional(rollbackFor = Exception.class)
   public Log createLog(@PathVariable String exerciseId, @Valid @RequestBody LogCreateInput input) {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     Log log = new Log();
     log.setUpdateAttributes(input);
     log.setExercise(exercise);
     log.setTags(iterableToSet(tagRepository.findAllById(input.getTagIds())));
     log.setUser(
-            userRepository
-                    .findById(currentUser().getId())
-                    .orElseThrow(() -> new ElementNotFoundException("Current user not found")));
+        userRepository
+            .findById(currentUser().getId())
+            .orElseThrow(() -> new ElementNotFoundException("Current user not found")));
     return exerciseLogRepository.save(log);
   }
 
@@ -127,9 +127,9 @@ public class ExerciseApi extends RestBehavior {
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   @Transactional(rollbackFor = Exception.class)
   public Log updateLog(
-          @PathVariable String exerciseId,
-          @PathVariable String logId,
-          @Valid @RequestBody LogCreateInput input) {
+      @PathVariable String exerciseId,
+      @PathVariable String logId,
+      @Valid @RequestBody LogCreateInput input) {
     Log log = logRepository.findById(logId).orElseThrow(ElementNotFoundException::new);
     log.setUpdateAttributes(input);
     log.setTags(iterableToSet(tagRepository.findAllById(input.getTagIds())));
@@ -154,13 +154,13 @@ public class ExerciseApi extends RestBehavior {
   @GetMapping(EXERCISE_URI + "/{exercise}/comchecks/{comcheck}")
   public Comcheck comcheck(@PathVariable String exercise, @PathVariable String comcheck) {
     Specification<Comcheck> filters =
-            ComcheckSpecification.fromExercise(exercise).and(ComcheckSpecification.id(comcheck));
+        ComcheckSpecification.fromExercise(exercise).and(ComcheckSpecification.id(comcheck));
     return comcheckRepository.findOne(filters).orElseThrow(ElementNotFoundException::new);
   }
 
   @GetMapping(EXERCISE_URI + "/{exercise}/comchecks/{comcheck}/statuses")
   public List<ComcheckStatus> comcheckStatuses(
-          @PathVariable String exercise, @PathVariable String comcheck) {
+      @PathVariable String exercise, @PathVariable String comcheck) {
     return comcheck(exercise, comcheck).getComcheckStatus();
   }
 
@@ -178,7 +178,7 @@ public class ExerciseApi extends RestBehavior {
   @PutMapping(EXERCISE_URI + "/{exerciseId}/teams/remove")
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   public Iterable<TeamOutput> removeExerciseTeams(
-          @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateTeamsInput input) {
+      @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateTeamsInput input) {
     return this.exerciseService.removeTeams(exerciseId, input.getTeamIds());
   }
 
@@ -186,7 +186,7 @@ public class ExerciseApi extends RestBehavior {
   @PutMapping(EXERCISE_URI + "/{exerciseId}/teams/replace")
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   public Iterable<TeamOutput> replaceExerciseTeams(
-          @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateTeamsInput input) {
+      @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateTeamsInput input) {
     return this.exerciseService.replaceTeams(exerciseId, input.getTeamIds());
   }
 
@@ -200,23 +200,23 @@ public class ExerciseApi extends RestBehavior {
   @PutMapping(EXERCISE_URI + "/{exerciseId}/teams/{teamId}/players/enable")
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   public Exercise enableExerciseTeamPlayers(
-          @PathVariable String exerciseId,
-          @PathVariable String teamId,
-          @Valid @RequestBody ExerciseTeamPlayersEnableInput input) {
+      @PathVariable String exerciseId,
+      @PathVariable String teamId,
+      @Valid @RequestBody ExerciseTeamPlayersEnableInput input) {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     Team team = teamRepository.findById(teamId).orElseThrow(ElementNotFoundException::new);
     input
-            .getPlayersIds()
-            .forEach(
-                    playerId -> {
-                      ExerciseTeamUser exerciseTeamUser = new ExerciseTeamUser();
-                      exerciseTeamUser.setExercise(exercise);
-                      exerciseTeamUser.setTeam(team);
-                      exerciseTeamUser.setUser(
-                              userRepository.findById(playerId).orElseThrow(ElementNotFoundException::new));
-                      exerciseTeamUserRepository.save(exerciseTeamUser);
-                    });
+        .getPlayersIds()
+        .forEach(
+            playerId -> {
+              ExerciseTeamUser exerciseTeamUser = new ExerciseTeamUser();
+              exerciseTeamUser.setExercise(exercise);
+              exerciseTeamUser.setTeam(team);
+              exerciseTeamUser.setUser(
+                  userRepository.findById(playerId).orElseThrow(ElementNotFoundException::new));
+              exerciseTeamUserRepository.save(exerciseTeamUser);
+            });
     return exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
   }
 
@@ -224,19 +224,19 @@ public class ExerciseApi extends RestBehavior {
   @PutMapping(EXERCISE_URI + "/{exerciseId}/teams/{teamId}/players/disable")
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   public Exercise disableExerciseTeamPlayers(
-          @PathVariable String exerciseId,
-          @PathVariable String teamId,
-          @Valid @RequestBody ExerciseTeamPlayersEnableInput input) {
+      @PathVariable String exerciseId,
+      @PathVariable String teamId,
+      @Valid @RequestBody ExerciseTeamPlayersEnableInput input) {
     input
-            .getPlayersIds()
-            .forEach(
-                    playerId -> {
-                      ExerciseTeamUserId exerciseTeamUserId = new ExerciseTeamUserId();
-                      exerciseTeamUserId.setExerciseId(exerciseId);
-                      exerciseTeamUserId.setTeamId(teamId);
-                      exerciseTeamUserId.setUserId(playerId);
-                      exerciseTeamUserRepository.deleteById(exerciseTeamUserId);
-                    });
+        .getPlayersIds()
+        .forEach(
+            playerId -> {
+              ExerciseTeamUserId exerciseTeamUserId = new ExerciseTeamUserId();
+              exerciseTeamUserId.setExerciseId(exerciseId);
+              exerciseTeamUserId.setTeamId(teamId);
+              exerciseTeamUserId.setUserId(playerId);
+              exerciseTeamUserRepository.deleteById(exerciseTeamUserId);
+            });
     return exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
   }
 
@@ -244,26 +244,26 @@ public class ExerciseApi extends RestBehavior {
   @PutMapping(EXERCISE_URI + "/{exerciseId}/teams/{teamId}/players/add")
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   public Exercise addExerciseTeamPlayers(
-          @PathVariable String exerciseId,
-          @PathVariable String teamId,
-          @Valid @RequestBody ExerciseTeamPlayersEnableInput input) {
+      @PathVariable String exerciseId,
+      @PathVariable String teamId,
+      @Valid @RequestBody ExerciseTeamPlayersEnableInput input) {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     Team team = teamRepository.findById(teamId).orElseThrow(ElementNotFoundException::new);
     Iterable<User> teamUsers = userRepository.findAllById(input.getPlayersIds());
     team.getUsers().addAll(fromIterable(teamUsers));
     teamRepository.save(team);
     input
-            .getPlayersIds()
-            .forEach(
-                    playerId -> {
-                      ExerciseTeamUser exerciseTeamUser = new ExerciseTeamUser();
-                      exerciseTeamUser.setExercise(exercise);
-                      exerciseTeamUser.setTeam(team);
-                      exerciseTeamUser.setUser(
-                              userRepository.findById(playerId).orElseThrow(ElementNotFoundException::new));
-                      exerciseTeamUserRepository.save(exerciseTeamUser);
-                    });
+        .getPlayersIds()
+        .forEach(
+            playerId -> {
+              ExerciseTeamUser exerciseTeamUser = new ExerciseTeamUser();
+              exerciseTeamUser.setExercise(exercise);
+              exerciseTeamUser.setTeam(team);
+              exerciseTeamUser.setUser(
+                  userRepository.findById(playerId).orElseThrow(ElementNotFoundException::new));
+              exerciseTeamUserRepository.save(exerciseTeamUser);
+            });
     return exercise;
   }
 
@@ -271,23 +271,23 @@ public class ExerciseApi extends RestBehavior {
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   @Transactional(rollbackFor = Exception.class)
   public Exercise removeExerciseTeamPlayers(
-          @PathVariable String exerciseId,
-          @PathVariable String teamId,
-          @Valid @RequestBody ExerciseTeamPlayersEnableInput input) {
+      @PathVariable String exerciseId,
+      @PathVariable String teamId,
+      @Valid @RequestBody ExerciseTeamPlayersEnableInput input) {
     Team team = teamRepository.findById(teamId).orElseThrow(ElementNotFoundException::new);
     Iterable<User> teamUsers = userRepository.findAllById(input.getPlayersIds());
     team.getUsers().removeAll(fromIterable(teamUsers));
     teamRepository.save(team);
     input
-            .getPlayersIds()
-            .forEach(
-                    playerId -> {
-                      ExerciseTeamUserId exerciseTeamUserId = new ExerciseTeamUserId();
-                      exerciseTeamUserId.setExerciseId(exerciseId);
-                      exerciseTeamUserId.setTeamId(teamId);
-                      exerciseTeamUserId.setUserId(playerId);
-                      exerciseTeamUserRepository.deleteById(exerciseTeamUserId);
-                    });
+        .getPlayersIds()
+        .forEach(
+            playerId -> {
+              ExerciseTeamUserId exerciseTeamUserId = new ExerciseTeamUserId();
+              exerciseTeamUserId.setExerciseId(exerciseId);
+              exerciseTeamUserId.setTeamId(teamId);
+              exerciseTeamUserId.setUserId(playerId);
+              exerciseTeamUserRepository.deleteById(exerciseTeamUserId);
+            });
     return exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
   }
 
@@ -315,9 +315,9 @@ public class ExerciseApi extends RestBehavior {
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   @Transactional(rollbackFor = Exception.class)
   public Exercise updateExerciseInformation(
-          @PathVariable String exerciseId, @Valid @RequestBody UpdateExerciseInput input) {
+      @PathVariable String exerciseId, @Valid @RequestBody UpdateExerciseInput input) {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     Set<Tag> currentTagList = exercise.getTags();
     exercise.setTags(iterableToSet(this.tagRepository.findAllById(input.getTagIds())));
     exercise.setUpdateAttributes(input);
@@ -328,10 +328,10 @@ public class ExerciseApi extends RestBehavior {
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   @Transactional(rollbackFor = Exception.class)
   public Exercise updateExerciseStart(
-          @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateStartDateInput input)
-          throws InputValidationException {
+      @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateStartDateInput input)
+      throws InputValidationException {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     if (!exercise.getStatus().equals(ExerciseStatus.SCHEDULED)) {
       String message = "Change date is only possible in scheduling state";
       throw new InputValidationException("exercise_start_date", message);
@@ -344,9 +344,9 @@ public class ExerciseApi extends RestBehavior {
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   @Transactional(rollbackFor = Exception.class)
   public Exercise updateExerciseTags(
-          @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateTagsInput input) {
+      @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateTagsInput input) {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     Set<Tag> currentTagList = exercise.getTags();
     exercise.setTags(iterableToSet(tagRepository.findAllById(input.getTagIds())));
     return exerciseService.updateExercice(exercise, currentTagList, input.isApplyTagRule());
@@ -356,9 +356,9 @@ public class ExerciseApi extends RestBehavior {
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   @Transactional(rollbackFor = Exception.class)
   public Exercise updateExerciseLogos(
-          @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateLogoInput input) {
+      @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateLogoInput input) {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     exercise.setLogoDark(documentRepository.findById(input.getLogoDark()).orElse(null));
     exercise.setLogoLight(documentRepository.findById(input.getLogoLight()).orElse(null));
     return exerciseRepository.save(exercise);
@@ -368,25 +368,25 @@ public class ExerciseApi extends RestBehavior {
 
   @GetMapping(EXERCISE_URI + "/findings/options")
   public List<FilterUtilsJpa.Option> optionsByNameLinkedToFindings(
-          @RequestParam(required = false) final String searchText,
-          @RequestParam(required = false) final String scenarioId) {
+      @RequestParam(required = false) final String searchText,
+      @RequestParam(required = false) final String scenarioId) {
     return exerciseService.getOptionsByNameLinkedToFindings(searchText, scenarioId);
   }
 
   @PostMapping(EXERCISE_URI + "/options")
   public List<FilterUtilsJpa.Option> optionsById(@RequestBody final List<String> ids) {
     return fromIterable(this.exerciseRepository.findAllById(ids)).stream()
-            .map(i -> new FilterUtilsJpa.Option(i.getId(), i.getName()))
-            .toList();
+        .map(i -> new FilterUtilsJpa.Option(i.getId(), i.getName()))
+        .toList();
   }
 
   @PutMapping(EXERCISE_URI + "/{exerciseId}/lessons")
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   @Transactional(rollbackFor = Exception.class)
   public Exercise updateExerciseLessons(
-          @PathVariable String exerciseId, @Valid @RequestBody LessonsInput input) {
+      @PathVariable String exerciseId, @Valid @RequestBody LessonsInput input) {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     exercise.setLessonsAnonymized(input.isLessonsAnonymized());
     return exerciseRepository.save(exercise);
   }
@@ -406,82 +406,82 @@ public class ExerciseApi extends RestBehavior {
     RawSimulation rawSimulation = exerciseRepository.rawDetailsById(exerciseId);
     // We get the injects linked to this exercise
     List<RawInject> rawInjects =
-            injectRepository.findRawByIds(rawSimulation.getInject_ids().stream().distinct().toList());
+        injectRepository.findRawByIds(rawSimulation.getInject_ids().stream().distinct().toList());
     // We get the tuple exercise/team/user
     List<RawExerciseTeamUser> listRawExerciseTeamUsers =
-            exerciseTeamUserRepository.rawByExerciseIds(List.of(exerciseId));
+        exerciseTeamUserRepository.rawByExerciseIds(List.of(exerciseId));
     // We get the objectives of this exercise
     List<RawObjective> rawObjectives = objectiveRepository.rawByExerciseIds(List.of(exerciseId));
     // We make a map of the Evaluations by objective
     Map<String, List<RawEvaluation>> mapEvaluationsByObjective =
-            evaluationRepository
-                    .rawByObjectiveIds(rawObjectives.stream().map(RawObjective::getObjective_id).toList())
-                    .stream()
-                    .collect(Collectors.groupingBy(RawEvaluation::getEvaluation_objective));
+        evaluationRepository
+            .rawByObjectiveIds(rawObjectives.stream().map(RawObjective::getObjective_id).toList())
+            .stream()
+            .collect(Collectors.groupingBy(RawEvaluation::getEvaluation_objective));
     // We make a map of grants of users id by type of grant (Planner, Observer)
     Map<String, List<RawGrant>> rawGrants =
-            grantRepository.rawByExerciseIds(List.of(exerciseId)).stream()
-                    .collect(Collectors.groupingBy(RawGrant::getGrant_name));
+        grantRepository.rawByExerciseIds(List.of(exerciseId)).stream()
+            .collect(Collectors.groupingBy(RawGrant::getGrant_name));
     // We get all the kill chain phases
     List<KillChainPhase> killChainPhase =
-            StreamSupport.stream(
-                            killChainPhaseRepository
-                                    .findAllById(
-                                            rawInjects.stream()
-                                                    .flatMap(rawInject -> rawInject.getInject_kill_chain_phases().stream())
-                                                    .toList())
-                                    .spliterator(),
-                            false)
-                    .collect(Collectors.toList());
+        StreamSupport.stream(
+                killChainPhaseRepository
+                    .findAllById(
+                        rawInjects.stream()
+                            .flatMap(rawInject -> rawInject.getInject_kill_chain_phases().stream())
+                            .toList())
+                    .spliterator(),
+                false)
+            .collect(Collectors.toList());
 
     // We create objectives and fill them with evaluations
     List<Objective> objectives =
-            rawObjectives.stream()
-                    .map(
-                            rawObjective -> {
-                              Objective objective = new Objective();
-                              if (mapEvaluationsByObjective.get(rawObjective.getObjective_id()) != null) {
-                                objective.setEvaluations(
-                                        mapEvaluationsByObjective.get(rawObjective.getObjective_id()).stream()
-                                                .map(
-                                                        rawEvaluation -> {
-                                                          Evaluation evaluation = new Evaluation();
-                                                          evaluation.setId(rawEvaluation.getEvaluation_id());
-                                                          evaluation.setScore(rawEvaluation.getEvaluation_score());
-                                                          return evaluation;
-                                                        })
-                                                .toList());
-                              }
-                              return objective;
-                            })
-                    .toList();
+        rawObjectives.stream()
+            .map(
+                rawObjective -> {
+                  Objective objective = new Objective();
+                  if (mapEvaluationsByObjective.get(rawObjective.getObjective_id()) != null) {
+                    objective.setEvaluations(
+                        mapEvaluationsByObjective.get(rawObjective.getObjective_id()).stream()
+                            .map(
+                                rawEvaluation -> {
+                                  Evaluation evaluation = new Evaluation();
+                                  evaluation.setId(rawEvaluation.getEvaluation_id());
+                                  evaluation.setScore(rawEvaluation.getEvaluation_score());
+                                  return evaluation;
+                                })
+                            .toList());
+                  }
+                  return objective;
+                })
+            .toList();
 
     List<ExerciseTeamUser> listExerciseTeamUsers =
-            listRawExerciseTeamUsers.stream().map(ExerciseTeamUser::fromRawExerciseTeamUser).toList();
+        listRawExerciseTeamUsers.stream().map(ExerciseTeamUser::fromRawExerciseTeamUser).toList();
 
     // We create an ExerciseDetails object and populate it
     SimulationDetails detail = fromRawExercise(rawSimulation, listExerciseTeamUsers, objectives);
     detail.setPlatforms(
-            rawInjects.stream()
-                    .flatMap(inject -> inject.getInject_platforms().stream())
-                    .distinct()
-                    .toList());
+        rawInjects.stream()
+            .flatMap(inject -> inject.getInject_platforms().stream())
+            .distinct()
+            .toList());
     detail.setCommunicationsNumber(
-            rawInjects.stream()
-                    .mapToLong(rawInject -> rawInject.getInject_communications().size())
-                    .sum());
+        rawInjects.stream()
+            .mapToLong(rawInject -> rawInject.getInject_communications().size())
+            .sum());
     detail.setKillChainPhases(killChainPhase);
     if (rawGrants.get(Grant.GRANT_TYPE.OBSERVER.name()) != null) {
       detail.setObservers(
-              rawGrants.get(Grant.GRANT_TYPE.OBSERVER.name()).stream()
-                      .map(RawGrant::getUser_id)
-                      .collect(Collectors.toSet()));
+          rawGrants.get(Grant.GRANT_TYPE.OBSERVER.name()).stream()
+              .map(RawGrant::getUser_id)
+              .collect(Collectors.toSet()));
     }
     if (rawGrants.get(Grant.GRANT_TYPE.PLANNER.name()) != null) {
       detail.setPlanners(
-              rawGrants.get(Grant.GRANT_TYPE.PLANNER.name()).stream()
-                      .map(RawGrant::getUser_id)
-                      .collect(Collectors.toSet()));
+          rawGrants.get(Grant.GRANT_TYPE.PLANNER.name()).stream()
+              .map(RawGrant::getUser_id)
+              .collect(Collectors.toSet()));
     }
 
     return detail;
@@ -497,7 +497,7 @@ public class ExerciseApi extends RestBehavior {
   @LogExecutionTime
   @PostMapping(EXERCISE_URI + "/global-scores")
   public ExercisesGlobalScoresOutput getExercisesGlobalScores(
-          @Valid @RequestBody ExercisesGlobalScoresInput input) {
+      @Valid @RequestBody ExercisesGlobalScoresInput input) {
     return exerciseService.getExercisesGlobalScores(input);
   }
 
@@ -505,12 +505,12 @@ public class ExerciseApi extends RestBehavior {
   @GetMapping(EXERCISE_URI + "/{exerciseId}/injects/results-by-attack-patterns")
   @PreAuthorize("isExerciseObserver(#exerciseId)")
   public List<InjectExpectationResultsByAttackPattern> injectResults(
-          @NotBlank final @PathVariable String exerciseId) {
+      @NotBlank final @PathVariable String exerciseId) {
     return exerciseRepository
-            .findById(exerciseId)
-            .map(Exercise::getInjects)
-            .map(ResultUtils::computeInjectExpectationResults)
-            .orElseThrow(() -> new RuntimeException("Exercise not found with ID: " + exerciseId));
+        .findById(exerciseId)
+        .map(Exercise::getInjects)
+        .map(ResultUtils::computeInjectExpectationResults)
+        .orElseThrow(() -> new RuntimeException("Exercise not found with ID: " + exerciseId));
   }
 
   @DeleteMapping(EXERCISE_URI + "/{exerciseId}/{documentId}")
@@ -518,14 +518,14 @@ public class ExerciseApi extends RestBehavior {
   @Transactional(rollbackFor = Exception.class)
   public Exercise deleteDocument(@PathVariable String exerciseId, @PathVariable String documentId) {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     exercise.setUpdatedAt(now());
     Document doc =
-            documentRepository.findById(documentId).orElseThrow(ElementNotFoundException::new);
+        documentRepository.findById(documentId).orElseThrow(ElementNotFoundException::new);
     Set<Exercise> docExercises =
-            doc.getExercises().stream()
-                    .filter(ex -> !ex.getId().equals(exerciseId))
-                    .collect(Collectors.toSet());
+        doc.getExercises().stream()
+            .filter(ex -> !ex.getId().equals(exerciseId))
+            .collect(Collectors.toSet());
     if (docExercises.isEmpty()) {
       // Document is no longer associate to any exercise, delete it
       documentRepository.delete(doc);
@@ -544,20 +544,20 @@ public class ExerciseApi extends RestBehavior {
   @PreAuthorize("isExercisePlanner(#exerciseId)")
   @Transactional(rollbackFor = Exception.class)
   public Exercise changeExerciseStatus(
-          @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateStatusInput input) {
+      @PathVariable String exerciseId, @Valid @RequestBody ExerciseUpdateStatusInput input) {
     ExerciseStatus status = input.getStatus();
     Exercise exercise =
-            this.exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        this.exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     // Check if next status is possible
     List<ExerciseStatus> nextPossibleStatus = exercise.nextPossibleStatus();
     if (!nextPossibleStatus.contains(status)) {
       throw new UnsupportedOperationException(
-              "Exercise cant support moving to status " + status.name());
+          "Exercise cant support moving to status " + status.name());
     }
     // In case of rescheduled of an exercise.
     boolean isCloseState =
-            ExerciseStatus.CANCELED.equals(exercise.getStatus())
-                    || ExerciseStatus.FINISHED.equals(exercise.getStatus());
+        ExerciseStatus.CANCELED.equals(exercise.getStatus())
+            || ExerciseStatus.FINISHED.equals(exercise.getStatus());
     if (isCloseState && ExerciseStatus.SCHEDULED.equals(status)) {
       exercise.setStart(null);
       exercise.setEnd(null);
@@ -566,37 +566,37 @@ public class ExerciseApi extends RestBehavior {
       pauseRepository.deleteAll(pauseRepository.findAllForExercise(exerciseId));
       // Reset injects outcome, communications and expectations
       this.injectStatusRepository.deleteAllById(
-              exercise.getInjects().stream()
-                      .map(Inject::getStatus)
-                      .map(i -> i.map(InjectStatus::getId).orElse(""))
-                      .toList());
+          exercise.getInjects().stream()
+              .map(Inject::getStatus)
+              .map(i -> i.map(InjectStatus::getId).orElse(""))
+              .toList());
       exercise.getInjects().forEach(Inject::clean);
       // Reset lessons learned answers
       List<LessonsAnswer> lessonsAnswers =
-              lessonsCategoryRepository
-                      .findAll(LessonsCategorySpecification.fromExercise(exerciseId))
-                      .stream()
-                      .flatMap(
-                              lessonsCategory ->
-                                      lessonsQuestionRepository
-                                              .findAll(
-                                                      LessonsQuestionSpecification.fromCategory(lessonsCategory.getId()))
-                                              .stream()
-                                              .flatMap(
-                                                      lessonsQuestion ->
-                                                              lessonsAnswerRepository
-                                                                      .findAll(
-                                                                              LessonsAnswerSpecification.fromQuestion(
-                                                                                      lessonsQuestion.getId()))
-                                                                      .stream()))
-                      .toList();
+          lessonsCategoryRepository
+              .findAll(LessonsCategorySpecification.fromExercise(exerciseId))
+              .stream()
+              .flatMap(
+                  lessonsCategory ->
+                      lessonsQuestionRepository
+                          .findAll(
+                              LessonsQuestionSpecification.fromCategory(lessonsCategory.getId()))
+                          .stream()
+                          .flatMap(
+                              lessonsQuestion ->
+                                  lessonsAnswerRepository
+                                      .findAll(
+                                          LessonsAnswerSpecification.fromQuestion(
+                                              lessonsQuestion.getId()))
+                                      .stream()))
+              .toList();
       lessonsAnswerRepository.deleteAll(lessonsAnswers);
       // Delete exercise transient files (communications, ...)
       fileService.deleteDirectory(exerciseId);
     }
     // In case of manual start
     if (ExerciseStatus.SCHEDULED.equals(exercise.getStatus())
-            && ExerciseStatus.RUNNING.equals(status)) {
+        && ExerciseStatus.RUNNING.equals(status)) {
       Instant nextMinute = now().truncatedTo(MINUTES).plus(1, MINUTES);
       exercise.setStart(nextMinute);
       actionMetricCollector.addSimulationPlayedCount();
@@ -604,7 +604,7 @@ public class ExerciseApi extends RestBehavior {
     // If exercise move from pause to running state,
     // we log the pause date to be able to recompute inject dates.
     if (ExerciseStatus.PAUSED.equals(exercise.getStatus())
-            && ExerciseStatus.RUNNING.equals(status)) {
+        && ExerciseStatus.RUNNING.equals(status)) {
       Instant lastPause = exercise.getCurrentPause().orElseThrow(ElementNotFoundException::new);
       exercise.setCurrentPause(null);
       Pause pause = new Pause();
@@ -615,12 +615,12 @@ public class ExerciseApi extends RestBehavior {
     }
     // If pause is asked, just set the pause date.
     if (ExerciseStatus.RUNNING.equals(exercise.getStatus())
-            && ExerciseStatus.PAUSED.equals(status)) {
+        && ExerciseStatus.PAUSED.equals(status)) {
       exercise.setCurrentPause(Instant.now());
     }
     // Cancelation
     if (ExerciseStatus.RUNNING.equals(exercise.getStatus())
-            && ExerciseStatus.CANCELED.equals(status)) {
+        && ExerciseStatus.CANCELED.equals(status)) {
       exercise.setEnd(now());
     }
     exercise.setUpdatedAt(now());
@@ -637,32 +637,32 @@ public class ExerciseApi extends RestBehavior {
   @LogExecutionTime
   @PostMapping(EXERCISE_URI + "/search")
   public Page<ExerciseSimple> exercises(
-          @RequestBody @Valid final SearchPaginationInput searchPaginationInput) {
+      @RequestBody @Valid final SearchPaginationInput searchPaginationInput) {
     Map<String, Join<Base, Base>> joinMap = new HashMap<>();
 
     if (currentUser().isAdmin()) {
       return buildPaginationCriteriaBuilder(
-              (Specification<Exercise> specification,
-               Specification<Exercise> specificationCount,
-               Pageable pageable) ->
-                      this.exerciseService.exercises(specification, specificationCount, pageable, joinMap),
-              searchPaginationInput,
-              Exercise.class,
-              joinMap);
+          (Specification<Exercise> specification,
+              Specification<Exercise> specificationCount,
+              Pageable pageable) ->
+              this.exerciseService.exercises(specification, specificationCount, pageable, joinMap),
+          searchPaginationInput,
+          Exercise.class,
+          joinMap);
 
     } else {
       return buildPaginationCriteriaBuilder(
-              (Specification<Exercise> specification,
-               Specification<Exercise> specificationCount,
-               Pageable pageable) ->
-                      this.exerciseService.exercises(
-                              findGrantedFor(currentUser().getId()).and(specification),
-                              findGrantedFor(currentUser().getId()).and(specificationCount),
-                              pageable,
-                              joinMap),
-              searchPaginationInput,
-              Exercise.class,
-              joinMap);
+          (Specification<Exercise> specification,
+              Specification<Exercise> specificationCount,
+              Pageable pageable) ->
+              this.exerciseService.exercises(
+                  findGrantedFor(currentUser().getId()).and(specification),
+                  findGrantedFor(currentUser().getId()).and(specificationCount),
+                  pageable,
+                  joinMap),
+          searchPaginationInput,
+          Exercise.class,
+          joinMap);
     }
   }
 
@@ -673,22 +673,22 @@ public class ExerciseApi extends RestBehavior {
   @PreAuthorize("isExerciseObserver(#exerciseId)")
   public Iterable<Communication> exerciseCommunications(@PathVariable String exerciseId) {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     List<Communication> communications = new ArrayList<>();
     exercise
-            .getInjects()
-            .forEach(injectDoc -> communications.addAll(injectDoc.getCommunications()));
+        .getInjects()
+        .forEach(injectDoc -> communications.addAll(injectDoc.getCommunications()));
     return communications;
   }
 
   @GetMapping("/api/communications/attachment")
   // @PreAuthorize("isExerciseObserver(#exerciseId)")
   public void downloadAttachment(@RequestParam String file, HttpServletResponse response)
-          throws IOException {
+      throws IOException {
     FileContainer fileContainer =
-            fileService.getFileContainer(file).orElseThrow(ElementNotFoundException::new);
+        fileService.getFileContainer(file).orElseThrow(ElementNotFoundException::new);
     response.addHeader(
-            HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=" + fileContainer.getName());
+        HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=" + fileContainer.getName());
     response.addHeader(HttpHeaders.CONTENT_TYPE, fileContainer.getContentType());
     response.setStatus(HttpServletResponse.SC_OK);
     fileContainer.getInputStream().transferTo(response.getOutputStream());
@@ -700,14 +700,14 @@ public class ExerciseApi extends RestBehavior {
   @GetMapping(EXERCISE_URI + "/{exerciseId}/export")
   @PreAuthorize("isExerciseObserver(#exerciseId)")
   public void exerciseExport(
-          @NotBlank @PathVariable final String exerciseId,
-          @RequestParam(required = false) final boolean isWithTeams,
-          @RequestParam(required = false) final boolean isWithPlayers,
-          @RequestParam(required = false) final boolean isWithVariableValues,
-          HttpServletResponse response)
-          throws IOException {
+      @NotBlank @PathVariable final String exerciseId,
+      @RequestParam(required = false) final boolean isWithTeams,
+      @RequestParam(required = false) final boolean isWithPlayers,
+      @RequestParam(required = false) final boolean isWithVariableValues,
+      HttpServletResponse response)
+      throws IOException {
     Exercise exercise =
-            exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
+        exerciseRepository.findById(exerciseId).orElseThrow(ElementNotFoundException::new);
     int exportOptionsMask = ExportOptions.mask(isWithPlayers, isWithTeams, isWithVariableValues);
 
     byte[] zippedExport = exportService.exportExerciseToZip(exercise, exportOptionsMask);
@@ -729,19 +729,19 @@ public class ExerciseApi extends RestBehavior {
 
   @PostMapping(EXERCISE_URI + "/{exerciseId}/check-rules")
   @ApiResponses(
-          value = {
-                  @ApiResponse(responseCode = "200", description = "Returns whether or not the rules apply")
-          })
+      value = {
+        @ApiResponse(responseCode = "200", description = "Returns whether or not the rules apply")
+      })
   @Operation(
-          summary = "Check rules",
-          description = "Check if the rules apply to a simulation update")
+      summary = "Check rules",
+      description = "Check if the rules apply to a simulation update")
   public CheckExerciseRulesOutput checkIfRuleApplies(
-          @PathVariable @NotBlank final String exerciseId,
-          @Valid @RequestBody final CheckExerciseRulesInput input) {
+      @PathVariable @NotBlank final String exerciseId,
+      @Valid @RequestBody final CheckExerciseRulesInput input) {
     Exercise exercise = this.exerciseService.exercise(exerciseId);
     return CheckExerciseRulesOutput.builder()
-            .rulesFound(this.exerciseService.checkIfTagRulesApplies(exercise, input.getNewTags()))
-            .build();
+        .rulesFound(this.exerciseService.checkIfTagRulesApplies(exercise, input.getNewTags()))
+        .build();
   }
   // endregion
 }
